--- a/glitch/styles.css
+++ b/glitch/styles.css
@@ -49,7 +49,7 @@ a:hover {
   min-height: 100%;
   max-height: 100vh;
   flex: 1;
-  background-color: #333333;
+  background-color: transparent;
 }
 .main-section {
   display: flex;
