--- a/glitch/styles.css
+++ b/glitch/styles.css
@@ -100,7 +100,7 @@ a:hover {
   font-size: 18pt;
   border: none;
   outline: none;
-  color: #eeeeee;
+  color: #cddc39;
   background-color: transparent;
   font-family: 'Roboto Mono', monospace;
 }
