--- a/skill/css/style.css
+++ b/skill/css/style.css
@@ -25,7 +25,7 @@ ul { list-style-type: none; }
 		.bar_container {
 			bottom: -8px;
 			width: 100%;
-			background-color: #333;
+			background-color: transparent;
 			text-align: right;
 		}			
 
