--- a/skill/css/style.css
+++ b/skill/css/style.css
@@ -40,3 +40,28 @@ ul { list-style-type: none; }
 					opacity: 0;
 					transition: opacity 0.3s linear;
 				}
+
+
+
+
+
+::-webkit-scrollbar {
+    width: 9px;
+}
+ 
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #9E9E9E; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: #616161; 
+}
