--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
-@import url("http://fonts.googleapis.com/css?family=Lato:300,400");
-@import url("http://fonts.googleapis.com/css?family=Inconsolata:400");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400");
+@import url("https://fonts.googleapis.com/css?family=Inconsolata:400");
 
 body {
   background-color: #F6F6F6;
