--- a/css.css
+++ b/css.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Inconsolata:400");
 
 body {
-  background-color: #F6F6F6;
+ /* background-color: #F6F6F6;*/
   text-align: center;
   margin: 0;
   overflow-x: hidden;
