--- a/CodeLock/RSS/css/style.css
+++ b/CodeLock/RSS/css/style.css
@@ -37,7 +37,7 @@ h2 {
 
 .header {
         background: rgba(0, 175, 222, 0.19);
-    color: #fff;
+    color: #000;
     position: fixed;
     top: 0;
     width: 100%;
