--- a/CodeLock/RSS/css/style.css
+++ b/CodeLock/RSS/css/style.css
@@ -43,11 +43,12 @@ h2 {
     width: 100%;
     padding: 0.5em 1em;
     border-radius: 20px;
+    font-weight:900;
 }
 
 .icon-list {
     font-size: 1.5em;
-    color: #FFF;
+    color: #268bff;
 }
 
 .slide-menu {
