--- a/CodeLock/RSS/css/style.css
+++ b/CodeLock/RSS/css/style.css
@@ -36,7 +36,7 @@ h2 {
 }
 
 .header {
-        background: rgba(0, 175, 222, 0.19);
+        background:#cff0f9;
     color: #000;
     position: fixed;
     top: 0;
