--- a/css.css
+++ b/css.css
@@ -158,8 +158,8 @@ a:hover {
 
 .samples {
   display: none;
-  margin: 50px 0;
-  padding: 30px;
+ /* margin: 50px 0;
+  padding: 30px;*/
  /* background-color: #F2F1EF;*/
   -webkit-touch-callout: none;
   -webkit-user-select: none;
