--- a/CodeLock/RSS/css/style.css
+++ b/CodeLock/RSS/css/style.css
@@ -56,7 +56,7 @@ h2 {
     position: absolute;
     top: 3.5em;
     padding: 1em;
-    background: #f1f1f1;
+    background: rgba(255, 246, 162, 0.92);
     height: 23%;
     width: 10em;
     transform: translate3d(0, 0, 0);
