--- a/CodeLock/xeditor/js/codemirror/codemirror.css
+++ b/CodeLock/xeditor/js/codemirror/codemirror.css
@@ -32,7 +32,7 @@
   padding: 0 3px 0 5px;
   min-width: 20px;
   text-align: right;
-  color: : #white;
+  color: : white;
   white-space: nowrap;
 }
 
