--- a/jquery.terminal-master/css/jquery.terminal.css
+++ b/jquery.terminal-master/css/jquery.terminal.css
@@ -136,7 +136,7 @@
     font-family: monospace;
     /*font-family: FreeMono, monospace; this don't work on Android */
     color: #aaa;
-    background-color: #000;
+    background-color: transparent;
     font-size: 12px;
     line-height: 14px;
 }
